# cpp-stub

./: .gitignore  .gitmodules  .replit  1.cpp  4.cpp  4_win.cpp  6.cpp  7.cpp  C++单元测试、一种简单打桩方式的实现.docx  CMakeLists.txt  README.md  README_zh.md  addr.h  addr_pri.h  doc.md  doc_zh.md  stub.h  stub_c++03.h  test_stub.cpp  单元测试打桩技巧.docx
.ccls-cache/@home@runner@CPlusPlus/: main.cpp.blob
.github/workflows/: make-test-multi-platform.yml
doc/: C++单元测试、一种简单打桩方式的实现.docx  README_zh.md  程序样子.docx
example/cmake_smoke/: CMakeLists.txt  smoke.cpp
examples/catch2/: README.md
examples/gtest/: README.md
examples/gtest/src/: Makefile
examples/gtest/ut/src/: Makefile  main.cpp  test_obj.cpp
mk/: cpp-stub.mk
src/: addr.h  addr_any.h  stub.h
src/elfio/: ELFIO.sln
src/elfio/ELFIOTest/: ELFIOTest.vcxproj
src/elfio/examples/elfdump/: ELFDump.vcxproj
src/elfio/examples/writer/: writer.vcxproj
src_linux/: addr_any.h  elfio.hpp
src_linux/elfio/: .gitignore
src_linux/elfio/ELFIOTest/: ELFIOTest.vcxproj.filters
src_linux/elfio/examples/writer/: writer.vcxproj.filters
src_win/: addr_any.h
test/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  Makefile  Makefile.darwin.clang  Makefile.linux  Makefile.linux32  Makefile.linux32.clang  Makefile.linux32.gcc  Makefile.linux64  Makefile.linux64.clang  Makefile.linux64.gcc  Makefile.win  Makefile.win32  Makefile.win64  README.md  test_addr.cpp  test_addr_any.cpp  test_addr_any_linux  test_addr_any_linux.cpp  test_addr_any_win.cpp  test_addr_lambda_linux  test_addr_lambda_linux.cpp  test_addr_lambda_win.cpp  test_addr_pri.cpp  test_class_member_function  test_class_member_function.cpp  test_constructor_function_linux  test_constructor_function_linux.cpp  test_constructor_function_x86_win.cpp  test_dtor_function_linux  test_dtor_function_linux.cpp  test_dtor_function_x86_win.cpp  test_dynamic_library_linux  test_dynamic_library_linux.cpp  test_dynamic_library_win.cpp  (+25 more)
test_cpp17/: test_private_member.cpp
tool/: macos_enable_stub.sh
ut_examples/catch2/src/: main.cpp  obj.hpp
ut_examples/catch2/ut/src/: Makefile  main.cpp  test_obj.cpp
ut_examples/gtest/src/: obj.cpp  obj_operations.cpp  obj_operations.hpp
ut_examples/gtest/ut/src/fixtures/: strings.hpp
ut_examples/gtest/ut/src/mocks/: mock_obj.hpp
